implement PlaidLink and Dwolla

--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,14 @@ APPWRITE_DATABASE_ID=
 APPWRITE_USER_COLLECTION_ID=
 APPWRITE_BANK_COLLECTION_ID=
 APPWRITE_TRANSACTION_COLLECTION_ID=
-NEXT_APPWRITE_KEY=
+APPWRITE_SECRET=
 
 #PLAID
 PLAID_CLIENT_ID=
 PLAID_SECRET=
-PLAID_ENV=
-PLAID_PRODUCTS=
-PLAID_COUNTRY_CODES=
+PLAID_ENV=sandbox
+PLAID_PRODUCTS=auth,transactions,identity
+PLAID_COUNTRY_CODES=US,CA
 
 #DWOLLA
 DWOLLA_KEY=
